--- a/index.html
+++ b/index.html
@@ -33,20 +33,14 @@
       }
 	  #name{
 		margin-top: 5px;
-		background-color: #D32F2F;
+		background-color: #03A9F4;
 		color:#ffffff;
 		font-family:'Oswald', sans-serif;
 	  }
 	  #btn{
 		font-family:'Oswald', sans-serif;
 	  }
-	  .map-icon-label .map-icon {
-		font-size: 24px;
-		color: #D32F2F	;
-		line-height: 48px;
-		text-align: center;
-		white-space: nowrap;
-		}
+	  
     </style>
   </head>
   <body>
@@ -56,18 +50,18 @@
 			<h3>Chicago City Information System</h3>
 		</div>
 		<div id="btn" class="btn-group-vertical ">
-			<button type="button" class="btn btn-danger" id="ps">Police Station Info</button>
-			<button type="button" class="btn btn-danger" id="lib">Library Info</button>
-			<button type="button" class="btn btn-danger" id="food">Places to eat</button>
-			<button type="button" class="btn btn-danger" id="home">Affordable Rental Housing</button>
-			<button type="button" class="btn btn-danger" id="wclinic">Woman and Child Clinic</button>
-			<button type="button" class="btn btn-danger" id="connect">Connect Chicago Locations</button>
-			<button type="button" class="btn btn-danger" id="community">Community Service Centers</button>
-			<button type="button" class="btn btn-danger" id="health">Neighborhood Health Clinics</button>
-			<button type="button" class="btn btn-danger" id="work">Workforce Centers</button>
-			<button type="button" class="btn btn-danger" id="condom">Condom Distribution Sites</button>
-			<button type="button" class="btn btn-danger" id="traffic">Traffic Violations</button>
-			<button type="button" class="btn btn-danger" id="crime">Crime Info</button>
+			<button type="button" class="btn btn-info" id="ps">Police Station Info</button>
+			<button type="button" class="btn btn-info" id="lib">Library Info</button>
+			<button type="button" class="btn btn-info" id="food">Places to eat</button>
+			<button type="button" class="btn btn-info" id="home">Affordable Rental Housing</button>
+			<button type="button" class="btn btn-info" id="wclinic">Woman and Child Clinic</button>
+			<button type="button" class="btn btn-info" id="connect">Connect Chicago Locations</button>
+			<button type="button" class="btn btn-info" id="community">Community Service Centers</button>
+			<button type="button" class="btn btn-info" id="health">Neighborhood Health Clinics</button>
+			<button type="button" class="btn btn-info" id="work">Workforce Centers</button>
+			<button type="button" class="btn btn-info" id="condom">Condom Distribution Sites</button>
+			<button type="button" class="btn btn-info" id="traffic">Traffic Violations</button>
+			<button type="button" class="btn btn-info" id="crime">Crime Info</button>
 		</div>
 	</div>
     <div class="col-sm-8" id="map"></div>	
