--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		
 			<h3>Chicago City Information System</h3>
 		</div>
-		<div id="btn" class="btn-group-vertical ">
+		<div id="btn" class="btn-group-vertical btn-block">
 			<button type="button" class="btn btn-info" id="ps">Police Station Info</button>
 			<button type="button" class="btn btn-info" id="lib">Library Info</button>
 			<button type="button" class="btn btn-info" id="food">Places to eat</button>
