--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		background-color: #03A9F4;
 		color:#ffffff;
 		font-family:'Oswald', sans-serif;
+		text-align: center;
 	  }
 	  #btn{
 		font-family:'Oswald', sans-serif;
