--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 	  }
 	  #btn{
 		font-family:'Oswald', sans-serif;
-		margin-left:15%;
-		margin-right:15%;
+		
+		
 	  }
 	  
     </style>
@@ -53,7 +53,7 @@
 			<h4>Chicago City Information System</h4>
 		</div>
 		<div id="btn" class="btn-group-vertical btn-block">
-			<button type="button" class="btn btn-info" id="ps">Police Station Info</button>
+			<button type="button" class="btn btn-info" id="ps" style="margin-left:15%;margin-right:15%;">Police Station Info</button>
 			<button type="button" class="btn btn-info" id="lib">Library Info</button>
 			<button type="button" class="btn btn-info" id="food">Places to eat</button>
 			<button type="button" class="btn btn-info" id="home">Affordable Rental Housing</button>
