--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         padding: 0;
       }
       #map {
-        height: 90%;
+        height: 95%;
+        margin-top:2%;
       }
 	  #name{
 		margin-top: 5px;
