--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         margin-top:1%;
       }
 	  #name{
-		margin-top: 5px;
+		margin-top: 1%;
 		background-color: #03A9F4;
 		color:#ffffff;
 		font-family:'Oswald', sans-serif;
