--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Chicago City Information System</title>
+    <link rel="shortcut icon" href="res/favicon.ico" />
 	
     <meta name="viewport" content="initial-scale=1.0">
     <meta charset="utf-8">
