--- a/index.html
+++ b/index.html
@@ -50,14 +50,10 @@
 	  #btn{
 		font-family:'Oswald', sans-serif;
 		
-		
 	  }
 	  
     </style>
- </head>
-
-
-
+</head>
 
 <body>
 
@@ -67,7 +63,7 @@
         <div id="sidebar-wrapper">
             <ul class="sidebar-nav">
                 <li class="sidebar-brand">
-                    <a href="#">
+                    <a href="index.html">
                         Chicago City Information
                     </a>
                 </li>
